Property/objects/Property_Owner__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_Address__c</fullName>
        <label>Owner Address</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <label>Owner Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_Photo__c</fullName>
        <label>Owner Photo</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Property Owner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Owner_Address__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Owner_Phone__c</columns>
        <columns>Owner_Photo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Property Owner Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Owner</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>phoneNumberVrule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( Owner_Phone__c , &apos;[0-9]{10}&apos;))</errorConditionFormula>
        <errorDisplayField>Owner_Phone__c</errorDisplayField>
        <errorMessage>Enter a Valid phone number</errorMessage>
    </validationRules>
</CustomObject>